# from-php-to-python

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  config.py  docker-compose.yml  log_config.py  main.py  pyproject.toml  settings.py
Infrastructure/: database.py
application/exceptions/: TimeoutException.py
docs/: breaking_changes.md  engineering_principles.md  vision.md
docs/domains/: player.md  search.md
docs/sprints/: 0.md  1.md  2.md
domain/exceptions/: RecordNotFoundException.py
domain/player/entities/: player.py
domain/player/enums/: deactivation.py  status.py  xp.py
domain/search/entities/: search.py
domain/search/enums/: status.py  xp_level.py
domain/shared/: string_generator.py
infrastructure/: database.py
infrastructure/exceptions/: ApiCallTimeoutException.py  DatabaseConnectionFailedException.py
infrastructure/migrations/: env.py
infrastructure/migrations/versions/: fc4096c62ec2_create_players_and_searches_table.py
infrastructure/models/: __init__.py  player.py  search.py
infrastructure/security/: password_hasher.py
journal/: 08-07-2026.md  09-07-2026.md  10-07-2026.md  11-07-2026.md  12-07-2026.md  13-07-2026.md  14-07-2026.md  16-07-2026.md  18-07-2026.md  19-07-2026.md  20-07-2026.md  23-07-2026.md
