[project]
name = "skillcupv2"
version = "0.1.0"
description = ""
authors = [
    {name = "Alireza Amrollahikoupaei",email = "amrollahi1992@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (==0.139.0)",
    "pydantic (==2.13.4)",
    "sqlalchemy (==2.0.51)",
    "uvicorn (==0.50.2)",
    "alembic (==1.18.5)",
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.14.1)",
    "ast-serialize (==0.6.0)",
    "click (==8.4.2)",
    "h11 (==0.16.0)",
    "idna (==3.18)",
    "iniconfig (==2.3.0)",
    "librt (==0.12.0)",
    "mako (==1.3.12)",
    "markupsafe (==3.0.3)",
    "mypy (==2.2.0)",
    "mypy-extensions (==1.1.0)",
    "packaging (==26.2)",
    "pathspec (==1.1.1)",
    "pluggy (==1.6.0)",
    "pydantic-core (==2.46.4)",
    "pygments (==2.20.0)",
    "pytest (==9.1.1)",
    "ruff (==0.15.20)",
    "starlette (==1.3.1)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.16.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
